[package]
name = "stem-rs"
version = "1.1.1"
edition = "2021"
description = "A complete Rust library for Tor control protocol — build privacy-focused applications with type-safe, async-first APIs"
license = "Apache-2.0"
authors = ["tn3w <tn3w@protonmail.com>"]
repository = "https://github.com/tn3w/stem-rs"
homepage = "https://stem.tn3w.dev"
documentation = "https://stem.tn3w.dev/docs/stem_rs/"
readme = "README.md"
keywords = ["tor", "privacy", "onion", "control-protocol", "async"]
categories = ["network-programming", "asynchronous", "cryptography"]

[features]
default = []
integration = []
extensive = ["integration"]

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
getrandom = "0.3"
regex = "1"
flate2 = "1.1"

[dev-dependencies]
proptest = "1"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["integration"]
